# beautiful-mermaid-rs

./: .envrc  AGENTS.md  Cargo.toml  ERRORFIX.md  LATER_PLANS.md  Makefile  README.md  WORKLOG.md  notes.md  task_plan.md
archive/: task_plan_2026-02-09.md
docs/: code-agent-cli.md  terminal-readable-diagrams.md
examples/: debug_user_case.rs  debug_user_case_meta.rs
scripts/: sync-vendor-bundle.sh
src/: error.rs  js.rs  lib.rs  main.rs  native_pathfinder.rs  theme.rs  types.rs
tests/: ascii_endpoint_alignment.rs  ascii_meta_smoke.rs  ascii_routing_smoke.rs  ascii_testdata.rs  ascii_user_case_edge_endpoint_invariants.rs  svg_smoke.rs  unicode_id_smoke.rs  validate_smoke.rs
tests/testdata/ascii/: ampersand_lhs_and_rhs.txt  backlink_from_top.txt  backlink_with_short_y_padding.txt  cls_all_relationships.txt  er_identifying.txt  preserve_order_of_definition.txt  self_reference_with_edge.txt  subgraph_with_labels.txt
tests/testdata/unicode/: ampersand_lhs.txt  ampersand_lhs_and_rhs.txt  ampersand_rhs.txt  back_reference_from_child.txt  backlink_from_bottom.txt  backlink_from_top.txt  cls_all_relationships.txt  comments.txt  duplicate_labels.txt  er_identifying.txt  graph_bt_direction.txt  preserve_order_of_definition.txt  self_reference.txt  self_reference_with_edge.txt  three_nodes.txt  three_nodes_single_line.txt  two_layer_single_graph.txt  two_layer_single_graph_longer_names.txt  two_nodes_linked.txt  two_nodes_longer_names.txt  two_root_nodes.txt  two_root_nodes_longer_names.txt  user_repro_case.txt
