[package]
name = "beautiful-mermaid-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust bindings for beautiful-mermaid: render Mermaid diagrams as SVG or ASCII/Unicode art (via embedded JS bundle)."

[dependencies]
rquickjs = "0.11.0"
once_cell = "1.20.2"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
selkie-rs = { version = "0.2.0", default-features = false }

[dev-dependencies]
walkdir = "2.5.0"
