[package]
name = "beautiful-mermaid-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust bindings for beautiful-mermaid: render Mermaid diagrams as SVG or ASCII/Unicode art (via embedded JS bundle)."

[dependencies]
rquickjs = "0.11.0"
once_cell = "1.20.2"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
selkie-rs = { version = "0.2.0", default-features = false }

[dev-dependencies]
walkdir = "2.5.0"
unicode-width = "0.2.0"

# ----------------------------------------------------------------------------
# 开发/测试性能（非常重要）
#
# 背景:
# - 本仓库的核心瓶颈是 A* 路由(尤其是 relaxed + 多候选 + 多档 bounds)。
# - 如果完全用默认的 debug opt-level=0, `cargo test` 在用户复现图上会跑到分钟级,
#   这会严重破坏“写回归测试 -> 快速迭代”的体验。
#
# 取舍:
# - 把 dev/test 的 opt-level 提到 1:
#   - 编译稍慢一点,但换来数量级的运行时加速,整体迭代更快;
#   - 不影响 release 行为与性能基准。
# ----------------------------------------------------------------------------

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
